# sgd-variants

./: .gitignore  README.md
code/: pyproject.toml
code/scripts/: run_all.py
code/src/sgd_variants/: __init__.py  check.py  figures.py  optimizers.py  problems.py  runner.py
presentation/: index.html
presentation/js/: playground.js
report/: build.sh  main.tex  references.bib
report/sections/: abstract.tex  conclusiones.tex  experimentos.tex  gradiente.tex  implementacion.tex  introduccion.tex  minilotes.tex  momentum.tex  portada.tex  preliminares.tex  sgd.tex
