[project]
name = "sgd-variants"
version = "0.1.0"
description = "NumPy implementations of SGD and variants for the MA-1006 research project"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sgd_variants"]
